--- a/indexx.html
+++ b/indexx.html
@@ -82,7 +82,7 @@
   <div id="app" class="min-h-full p-8 gradient-bg"><!-- Header Section -->
    <div class="max-w-7xl mx-auto">
     <div class="text-center mb-8 float-animation">
-     <h1 id="dashboard-title" class="text-5xl font-bold mb-2">🏙️ Dashboard Fasilitas Samarinda</h1>
+     <h1 id="dashboard-title" class="text-5xl font-bold mb-2">Dashboard Fasilitas Samarinda</h1>
      <p class="text-xl opacity-90">Informasi lengkap fasilitas publik kota!</p>
     </div><!-- City Info Brief -->
     <div class="text-center mb-8">
@@ -92,7 +92,7 @@
       </div>
       <h2 id="profile-name" class="text-3xl font-bold mb-2">Samarinda</h2>
       <p id="profile-title" class="text-lg mb-3 opacity-80 font-medium">Kota Tepian</p>
-      <p id="profile-bio" class="text-base opacity-70 leading-relaxed">Ibu kota Kalimantan Timur dengan berbagai fasilitas publik yang lengkap!</p>
+      <p id="profile-bio" class="text-base opacity-70 leading-relaxed">Ibu kota Kalimantan Timur dengan berbagai fasilitas publik.</p>
      </div>
     </div><!-- Facilities Section -->
     <div class="space-y-6"><!-- Navigation Tabs -->
@@ -1039,4 +1039,5 @@
     }
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'99b22d5d52da61bc',t:'MTc2MjU3NDU3MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+
 </html>
